--- a/screens/CallView.html
+++ b/screens/CallView.html
@@ -14,16 +14,16 @@
         }
 
         video {
-            background: #dee;
+            /* background: #dee; */
         }
 
         #localVideo {
             position: absolute;
             top: 0;
             right: 0;
-            width: 120px;
+            width: 150px;
             z-index: 10;
-            background: #333;
+            /* background: #333; */
         }
 
         #remoteVideo {
